--- a/Martsystem/MartSystem/MartSystem.csproj
+++ b/Martsystem/MartSystem/MartSystem.csproj
@@ -63,6 +63,12 @@
     <Compile Include="category.Designer.cs">
       <DependentUpon>category.cs</DependentUpon>
     </Compile>
+    <Compile Include="ClassMart\dataCon.cs" />
+    <Compile Include="ClassMart\dom_Design.cs" />
+    <Compile Include="ClassMart\Dom_SqlClass.cs" />
+    <Compile Include="ClassMart\EmpClass.cs" />
+    <Compile Include="ClassMart\RestrictionClass.cs" />
+    <Compile Include="ClassMart\UserLoginDetail.cs" />
     <Compile Include="Employee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +130,7 @@
   <ItemGroup>
     <None Include="Resources\employee.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
