--- a/Martsystem/MartSystem/MartSystem.csproj
+++ b/Martsystem/MartSystem/MartSystem.csproj
@@ -36,18 +36,18 @@
     <Reference Include="Bunifu_UI_v1.5.3">
       <HintPath>..\..\..\Visual studio\PI\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
-<<<<<<< HEAD
-=======
     <Reference Include="DevExpress.Data.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Printing.v17.2.Core, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Utils.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraBars.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v17.2, Version=17.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
->>>>>>> b3a7776b4b6978b75e3c17db856e35951dff4d13
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +57,8 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Brand.cs">
@@ -78,8 +80,6 @@
     <Compile Include="ClassMart\EmpClass.cs" />
     <Compile Include="ClassMart\RestrictionClass.cs" />
     <Compile Include="ClassMart\UserLoginDetail.cs" />
-<<<<<<< HEAD
-=======
     <Compile Include="CreateExpense.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,20 +98,23 @@
     <Compile Include="Custom Controls\Watermarked Textbox.Designer.cs">
       <DependentUpon>Watermarked Textbox.cs</DependentUpon>
     </Compile>
->>>>>>> b3a7776b4b6978b75e3c17db856e35951dff4d13
     <Compile Include="Employee.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Employee.Designer.cs">
       <DependentUpon>Employee.cs</DependentUpon>
     </Compile>
-<<<<<<< HEAD
-=======
     <Compile Include="ExpenseData.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ExpenseData.Designer.cs">
       <DependentUpon>ExpenseData.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Import.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Import.Designer.cs">
+      <DependentUpon>Import.cs</DependentUpon>
     </Compile>
     <Compile Include="InvoiceData.cs">
       <SubType>Form</SubType>
@@ -119,7 +122,6 @@
     <Compile Include="InvoiceData.Designer.cs">
       <DependentUpon>InvoiceData.cs</DependentUpon>
     </Compile>
->>>>>>> b3a7776b4b6978b75e3c17db856e35951dff4d13
     <Compile Include="LogIN.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -134,15 +136,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-<<<<<<< HEAD
-=======
     <Compile Include="Stock.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Stock.Designer.cs">
       <DependentUpon>Stock.cs</DependentUpon>
     </Compile>
->>>>>>> b3a7776b4b6978b75e3c17db856e35951dff4d13
     <Compile Include="supplyer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -155,11 +154,6 @@
     <EmbeddedResource Include="category.resx">
       <DependentUpon>category.cs</DependentUpon>
     </EmbeddedResource>
-<<<<<<< HEAD
-    <EmbeddedResource Include="Employee.resx">
-      <DependentUpon>Employee.cs</DependentUpon>
-    </EmbeddedResource>
-=======
     <EmbeddedResource Include="CreateExpense.resx">
       <DependentUpon>CreateExpense.cs</DependentUpon>
     </EmbeddedResource>
@@ -175,10 +169,12 @@
     <EmbeddedResource Include="ExpenseData.resx">
       <DependentUpon>ExpenseData.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Import.resx">
+      <DependentUpon>Import.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="InvoiceData.resx">
       <DependentUpon>InvoiceData.cs</DependentUpon>
     </EmbeddedResource>
->>>>>>> b3a7776b4b6978b75e3c17db856e35951dff4d13
     <EmbeddedResource Include="LogIN.resx">
       <DependentUpon>LogIN.cs</DependentUpon>
     </EmbeddedResource>
@@ -195,12 +191,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-<<<<<<< HEAD
-=======
     <EmbeddedResource Include="Stock.resx">
       <DependentUpon>Stock.cs</DependentUpon>
     </EmbeddedResource>
->>>>>>> b3a7776b4b6978b75e3c17db856e35951dff4d13
     <EmbeddedResource Include="supplyer.resx">
       <DependentUpon>supplyer.cs</DependentUpon>
     </EmbeddedResource>
