--- a/Martsystem/MartSystem/MartSystem.csproj
+++ b/Martsystem/MartSystem/MartSystem.csproj
@@ -142,6 +142,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quantity Type.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Quantity Type.Designer.cs">
+      <DependentUpon>Quantity Type.cs</DependentUpon>
+    </Compile>
     <Compile Include="Stock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -200,6 +206,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Quantity Type.resx">
+      <DependentUpon>Quantity Type.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Stock.resx">
       <DependentUpon>Stock.cs</DependentUpon>
     </EmbeddedResource>
