--- a/Martsystem/MartSystem/MartSystem.csproj
+++ b/Martsystem/MartSystem/MartSystem.csproj
@@ -75,11 +75,11 @@
     <Compile Include="category.Designer.cs">
       <DependentUpon>category.cs</DependentUpon>
     </Compile>
-    <Compile Include="ChangeRate.cs">
+    <Compile Include="ChangeUserSetting.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ChangeRate.Designer.cs">
-      <DependentUpon>ChangeRate.cs</DependentUpon>
+    <Compile Include="ChangeUserSetting.Designer.cs">
+      <DependentUpon>ChangeUserSetting.cs</DependentUpon>
     </Compile>
     <Compile Include="ClassMart\ComboboxItem.cs" />
     <Compile Include="ClassMart\dataCon.cs" />
@@ -192,8 +192,8 @@
     <EmbeddedResource Include="category.resx">
       <DependentUpon>category.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ChangeRate.resx">
-      <DependentUpon>ChangeRate.cs</DependentUpon>
+    <EmbeddedResource Include="ChangeUserSetting.resx">
+      <DependentUpon>ChangeUserSetting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateExpense.resx">
       <DependentUpon>CreateExpense.cs</DependentUpon>
